--- a/src/page2.html
+++ b/src/page2.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Page2</title>
-    <link rel="stylesheet" href="./css/main.scss">
-  </head>
+ <include src="./html/head.html"></include>
   <body>
     <h1 data-aos="fade-up" class="title">Page 2</h1>
     <a href="index.html">Goto Home Page</a>
